# rena

./: ChangeLog  FAQ  Makefile.am  configure.ac
data/: Makefile.am  io.github.santelmotechnologies.metainfo.xml.in  rena.1  rena.desktop.in
plugins/: Makefile.am  rena-plugin-macros.h
plugins/acoustid/: Makefile.am  acoustid.plugin  rena-acoustid-plugin.c
plugins/ampache/: ampache.plugin  rena-ampache-plugin.c
plugins/cdrom/: cdrom.plugin  rena-cdrom-plugin.c  rena-cdrom-plugin.h
plugins/dlna/: dlna.plugin  rena-dlna-plugin.c
plugins/dlna-renderer/: Makefile.am  dlna-renderer.plugin  rena-dlna-renderer-plugin.c  rena-dlna-renderer-plugin.h
plugins/gnome-media-keys/: Makefile.am  gnome-media-keys.plugin  rena-gnome-media-keys-plugin.c  rena-gnome-media-keys-plugin.h
plugins/keybinder/: keybinder.plugin  rena-keybinder-plugin.c  rena-keybinder-plugin.h
plugins/koel/: koel.plugin  rena-koel-plugin.c
plugins/lastfm/: lastfm.plugin  rena-lastfm-plugin.c
plugins/mpris2/: mpris2.plugin  rena-mpris2-plugin.c  rena-mpris2-plugin.h
plugins/mtp/: mtp.plugin  rena-devices-mtp.c  rena-mtp-thread-data.h
plugins/notify/: Makefile.am  notify.plugin  rena-notify-plugin.c
plugins/removable-media/: removable.plugin
plugins/song-info/: rena-song-info-dialog.c  rena-song-info-plugin.c  rena-song-info-thread-artistart.c  rena-song-info-thread-pane.c  rena-song-info-thread-pane.h  song-info.plugin
plugins/tunein/: rena-tunein-plugin.c  tunein.plugin
plugins/visualizer/: rena-visualizer-particle.c  rena-visualizer-plugin.c  rena-visualizer.c  visualizer.plugin
po/: af.po  ast.po  bn.po  bn_IN.po  bs.po  eo.po  eu.po  oc.po
src/: Makefile.in  librena.pc.in  rena-menubar.c  rena.c
